# RustRocketDieselBlog

./: .env  Cargo.toml  README.md
migrations/2025-04-17-012031_tables/: down.sql  up.sql
migrations/2025-04-20-014106_create_posts_tags/: down.sql  up.sql
migrations/2025-04-21-002158_alter_table_posts/: down.sql  up.sql
migrations/2025-04-26-113325_create_usergroups/: up.sql
src/: main.rs  schema.rs
src/models/: db_tables.rs  mod.rs  paginate.rs  post.rs  user.rs
src/services/: db.rs  error.rs  group.rs  mod.rs  post.rs  user.rs
templates/: groups.html.hbs  users.html.hbs
